log
Fri, Mar 28, 2025 10:59:28 AM: 
 list.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
list.c: In function 'lastList':
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
25021aa
Fri, Mar 28, 2025 11:01:27 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
8bc3e15
Fri, Mar 28, 2025 11:11:29 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
1e322d4
Fri, Mar 28, 2025 11:13:26 AM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 25/70
431c006
Fri, Mar 28, 2025 11:15:18 AM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ef3fad8
Fri, Mar 28, 2025 11:19:47 AM: 
 list.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  5|4
total_score: 25/70
9e03385
Fri, Mar 28, 2025 11:22:37 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
3362b02
Fri, Mar 28, 2025 11:25:08 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
4a7638e
Fri, Mar 28, 2025 11:29:02 AM: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
8acaa73
Fri, Mar 28, 2025 11:30:25 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:77:17: error: 'return' with a value, in function returning void [-Werror]
     else return NULL ;
                 ^~~~
list.c:68:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
835aa2f
Fri, Mar 28, 2025 11:31:40 AM: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
3a7dd84
Fri, Mar 28, 2025 11:32:29 AM: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  9|3
total_score: 35/70
f561232
Fri, Mar 28, 2025 11:41:41 AM: 
 list.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  10|2
total_score: 45/70
198e36c
Fri, Mar 28, 2025 11:47:22 AM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
8240538
Fri, Mar 28, 2025 11:49:46 AM: 
 list.c | 50 ++++++++++++++++++--------------------------------
 1 file changed, 18 insertions(+), 32 deletions(-)
 tests:  10|2
total_score: 45/70
e117a8c
Fri, Mar 28, 2025 12:00:24 PM: 
 list.c | 47 +++++++++++++++++++++++++++++++++++++----------
 1 file changed, 37 insertions(+), 10 deletions(-)
 tests:  10|2
total_score: 45/70
9e22081
Fri, Mar 28, 2025 12:01:56 PM: 
 list.c | 17 ++++++++---------
 1 file changed, 8 insertions(+), 9 deletions(-)
 tests:  10|2
total_score: 45/70
517544b
Fri, Mar 28, 2025 12:04:52 PM: 
 list.c | 24 ++++++++++--------------
 1 file changed, 10 insertions(+), 14 deletions(-)
 tests:  10|2
total_score: 45/70
80af252
Fri, Mar 28, 2025 12:07:10 PM: 
 list.c | 27 +++++++++++++++++++++------
 1 file changed, 21 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:103:12: error: redefinition of 'newNode'
     Node * newNode = (Node *)malloc(sizeof(Node));
            ^~~~~~~
list.c:96:12: note: previous definition of 'newNode' was here
     Node * newNode = (Node *)malloc(sizeof(Node));
            ^~~~~~~
Compilation failed
b94f5db
Fri, Mar 28, 2025 12:08:33 PM: 
 list.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  10|2
total_score: 45/70
168e07d
Fri, Mar 28, 2025 12:20:28 PM: 
 list.c | 37 +++++--------------------------------
 1 file changed, 5 insertions(+), 32 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:100:1: error: expected identifier before '}' token
 }
 ^
Compilation failed
3af138e
Fri, Mar 28, 2025 12:21:31 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
0724f99
Fri, Mar 28, 2025  4:24:22 PM: 
 list.c | 30 +++++++++---------------------
 1 file changed, 9 insertions(+), 21 deletions(-)
 tests:  10|2
total_score: 45/70
f4fa148
Fri, Mar 28, 2025  4:33:02 PM: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:89:25: error: 'lista' undeclared (first use in this function)
     if (list == NULL || lista -> current == NULL){
                         ^~~~~
list.c:89:25: note: each undeclared identifier is reported only once for each function it appears in
list.c:93:23: error: too few arguments to function 'createNode'
     Node *nuevoNodo = createNode() ;
                       ^~~~~~~~~~
list.c:22:8: note: declared here
 Node * createNode(void * data) {
        ^~~~~~~~~~
Compilation failed
2cb4f1c
Fri, Mar 28, 2025  4:33:28 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 55/70
493eadd
